--- a/style.css
+++ b/style.css
@@ -1,26 +1,78 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+.head {
+    text-align: center;
+    font-size: 50px;
+    border: 2px solid blanchedalmond;
+}
+
+body {
     background-color: #313131;
     color: aliceblue;
 }
 
-.center  {
+.form {
+    font-size: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    padding: 40px;
+    gap: 40px;
 }
 
-#clock{
+input {
+    font-size: 36px;
+    /* Other styles if needed */
+}
+
+.center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.time-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #272727;
+}
+
+#banner {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+#clock {
     font-size: 20px;
     background-color: darkorange;
     padding: 20px 50px;
-    margin-top: 10px;
     border-radius: 10px;
+}
+
+.content-section {
+    background-color: #212121;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper {
+    text-align: center;
+    padding: 20px;
+}
+
+h1, p {
+    margin-bottom: 5px;
+    font-size: 20px; /* Change 'small' to a specific value or unit */
+}
+
+.resultparas {
+    font-size: 40px;
+    text-align: center;
 }
